[package]
name = "htom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "3.1.10", features = ["derive"] }
html2md = "0.2.13"
reqwest = "0.11.10"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
time = { version = "0.3.9", features = ["macros"] }
tracing = "0.1.34"
tracing-subscriber = {version = "0.3.11", features = ["env-filter", "time", "local-time"]}
